--- a/1.Linear_regression.ipynb
+++ b/1.Linear_regression.ipynb
@@ -3,17 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -112,13 +101,17 @@
        "9              3.7  57189.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"salary_data.csv\")\n",
+    "import pandas as pd\n",
+    "\n",
+    "data_path = \"https://raw.githubusercontent.com/AJV009/Intro_to_Data_Science_Regression/master/salary_data.csv\"\n",
+    "\n",
+    "df = pd.read_csv(data_path)\n",
     "df.head(10)"
    ]
   },
@@ -188,6 +181,8 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.scatter(X_test, y_test, color = 'red')\n",
     "plt.plot(X_test, model.predict(X_test), color = 'blue')\n",
     "plt.title('Salary vs Experience')\n",
