--- a/2.Multiple_Regression.ipynb
+++ b/2.Multiple_Regression.ipynb
@@ -6,18 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"startups.csv\")\n",
+    "import pandas as pd\n",
+    "\n",
+    "url_path = \"https://raw.githubusercontent.com/AJV009/Intro_to_Data_Science_Regression/master/startups.csv\"\n",
+    "\n",
+    "df = pd.read_csv(url_path)\n",
     "df.head(10)"
    ]
   },
