--- a/2.Cat_Regression.ipynb
+++ b/2.Cat_Regression.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pandas get_dummies function encodes catogarical data to 1 & 0\n",
     "df = pd.get_dummies(df)\n",
     "df.head()"
    ]
