--- a/4.SentimentAnalysis.ipynb
+++ b/4.SentimentAnalysis.ipynb
@@ -6,7 +6,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn."
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.download('vader_lexicon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nltk_sentiment(sentence):\n",
+    "    from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "    nltk_sentiment = SentimentIntensityAnalyzer()\n",
+    "    score = nltk_sentiment.polarity_scores(sentence)\n",
+    "    return score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(t1, nltk_sentiment(t1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = \"Food is good and not too expensive. Serving is just right for adult. Ambient is nice too.\"\n",
+    "t2 = \"Good office lunch or after work place to go to with a big group as they have a lot of private areas with large tables\"\n",
+    "t3 = \"As a Korean person, it was very disappointing food quality and very pricey for what you get. I won't go back there again. \"\n",
+    "t4 = \"Fast service. Prices are reasonable and food is decent.\"\n",
+    "t5 = \"Extremely long waiting time. Food is decent but definitely not worth the wait.\"\n",
+    "t6 = \"Clean premises, tasty food. My family favourites are the clear\""
    ]
   }
  ],
